Fixed jittery animation on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -16,7 +16,7 @@ html {
 }
 
 .content-container {
-	transition: margin 0.5s, opacity 0.5s;
+	transition: margin 0.5s, opacity 0.4s;
 	width: 80%;
 	padding: 0 10%;
 	height: 94%;
